syntax = "proto3";

package org.couchers.api.sso;

service SSO {
  // This is a secure service: a user needs to be authenticated and not jailed to call functions here, refer to auth.proto and jail.proto

  rpc SSO(SSOReq) returns (SSORes) {
    // Performs Discourse SSO
  }
}

message SSOReq {
  // just raw query strings from discourse
  string sso = 1;
  string sig = 2;
}

message SSORes {
  string redirect_url = 1;
}
